<resources>
    <string name="app_name">PSDApp</string>
    <string name="title_login_activity">PRIVATE SPACE DRIVE APPLICATION</string>
    <string name="ip_server_edittext">Enter IP server</string>
    <string name="api_key_edittext">Enter key API</string>
    <string name="text_checkbox">Save your authorization data</string>
    <string name="connect_login">CONNECT</string>
    <string name="footer">© 2020 Tomasz Waksmundzki</string>
    <string name="error_login">Fill all fields!</string>
    <string name="error_login_type_m1">No access!</string>
    <string name="error_login_type_0">Wrong key API!</string>
    <string name="error_login_type_2">Unknown host: /</string>
    <string name="error_login_type_3">Failed to connect to /</string>
    <string name="error_login_type_4">Invalid URL: /</string>
    <string name="error_login_type_5">Undefine error!</string>
    <string name="error_login_type_6">Connection error!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_search_hint">Let\'s type ...</string>
    <string name="main_search_button">Search ...</string>
    <string name="main_no_objects">No files found</string>
    <string name="drawer_title_more_action">More action</string>
    <string name="drawer_action_recent">Recent</string>
    <string name="drawer_action_bin">Bin</string>
    <string name="drawer_action_backup">Backup</string>
    <string name="drawer_action_history">History</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_language">Language</string>
    <string name="drawer_language_pl">PL</string>
    <string name="drawer_language_en">EN</string>
    <string name="drawer_theme">Theme</string>
    <string name="drawer_theme_light">Light</string>
    <string name="drawer_theme_dark">Dark</string>
    <string name="drawer_title_storage">Storage</string>
    <string name="drawer_title_storage_value">Loading data ...</string>


    <string name="popup_file_rename">Rename</string>
    <string name="popup_file_share">Share</string>
    <string name="popup_file_move">Move</string>
    <string name="popup_file_download">Download</string>
    <string name="popup_file_details">Details</string>
    <string name="popup_file_remove">Remove</string>

</resources>