<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="196dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_connect" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login_activity"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/et_ip_server"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/et_style_border"
        android:ems="10"
        android:hint="@string/ip_server_edittext"
        android:inputType="textNoSuggestions"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/et_api_key"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_style_border"
        android:ems="10"
        android:hint="@string/api_key_edittext"
        android:inputType="textNoSuggestions"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite2"
        app:layout_constraintEnd_toEndOf="@+id/et_ip_server"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_ip_server"
        app:layout_constraintTop_toBottomOf="@+id/et_ip_server" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/connect_login"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/et_api_key"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/et_api_key"
        app:layout_constraintTop_toBottomOf="@+id/et_api_key" />

    <TextView
        android:id="@+id/tv_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/footer"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        app:layout_constraintBottom_toTopOf="@+id/btn_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_api_key" />

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_api_key" />

    <ImageView
        android:id="@+id/iv_ok"
        android:layout_width="74dp"
        android:layout_height="70dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_api_key"
        app:srcCompat="@drawable/ic_ok" />

    <CheckBox
        android:id="@+id/chb_save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/text_checkbox"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_connect" />

</androidx.constraintlayout.widget.ConstraintLayout>